--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="pricing_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\pricing_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="secure_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\secure_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="playlist_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\playlist_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,8 +133,14 @@
   <data name="checklist_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\checklist_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="sell_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\sell_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="delete_bin_48px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\delete_bin_48px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2minimize_window_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\2minimize_window_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="delete_bin_60px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\delete_bin_60px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,6 +157,12 @@
   <data name="graph_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\graph_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="print_address_label_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\print_address_label_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="application_shield_120px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\application_shield_120px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="print_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\print_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,9 +178,6 @@
   <data name="menu_squared_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\menu_squared_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="search_in_list_48px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\search_in_list_48px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="refund_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\refund_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -174,9 +186,6 @@
   </data>
   <data name="male_user_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\male_user_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="male_user_200px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\male_user_200px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="delete_bin_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\delete_bin_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -190,29 +199,44 @@
   <data name="lock_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\lock_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lock_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\lock_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="administrative_tools_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\administrative_tools_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menu1_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\menu1_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="toolbox_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\toolbox_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="documents_folder_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\documents_folder_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="search_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\search_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="search_folder_48px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\search_folder_48px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="edit_file_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\edit_file_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="new_copy_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\new_copy_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="google_web_search_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\google_web_search_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="send_to_printer_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\send_to_printer_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="return_purchase_60px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\return_purchase_60px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="automatic_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\automatic_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="playlist_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\playlist_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="edit_file_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\edit_file_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="search_in_list_48px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\search_in_list_48px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="send_to_printer_60px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\send_to_printer_60px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -229,8 +253,8 @@
   <data name="add_new_52px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\add_new_52px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="sell_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\sell_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="administrator_male_90px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\administrator_male_90px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="browse_folder_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\browse_folder_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -253,8 +277,8 @@
   <data name="buy_60px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\buy_60px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="print_30px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\print_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="search_property_24px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\search_property_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="delete_bin_60px2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\delete_bin_60px2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -277,6 +301,9 @@
   <data name="deposit_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\deposit_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="support_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\support_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="return_purchase_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\return_purchase_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -286,8 +313,8 @@
   <data name="print_30px2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\print_30px2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="delete_bin_30px2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\delete_bin_30px2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="print_30px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\print_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="google_web_search_52px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\google_web_search_52px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -301,11 +328,17 @@
   <data name="pay_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\pay_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="search_property_24px1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\search_property_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="delete_bin_30px2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\delete_bin_30px2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lock_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\lock_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="combo_chart_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\combo_chart_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="male_user_200px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\male_user_200px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="search_folder_48px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\search_folder_48px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="search_property_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\search_property_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -313,8 +346,14 @@
   <data name="undo_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\undo_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="combo_chart_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\combo_chart_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="synchronize_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\synchronize_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2shutdown_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\2shutdown_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="google_web_search_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\google_web_search_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="search_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\search_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -322,7 +361,7 @@
   <data name="update_30px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\update_30px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="menu1_64px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\menu1_64px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="shutdown_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\shutdown_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
